workspace = { members = ["pwdgen_core"] }
[package]
name = "pwdgen"
version = "0.2.0"
edition = "2021"
authors = ["Stefan Volz"]
repository = "https://github.com/SV-97/passman/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
colored = "2.1.0"
eyre = "0.6.12"
inquire = "0.6.2"
lazy_static = "1.4.0"
pwdgen_core = { path = "pwdgen_core" }
rand = "0.8.5"
secrecy = { version = "0.8.0", features = ["alloc"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
strip = true # strip symbols from binary
